[package]
name = "optimigation"
version = "0.1.0"
edition = "2021"
authors = ["Nima Hirota"]

description = "This is Rust tools for evolutionary computation, participate GA."

repository = "https://github.com/nima555/optimiGAtion"
readme = "README.md"

keywords = ["GA","evolutionary_computation","Genetic_algorithm","optimization"]
categories = ["science"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
text-colorizer = "1"
