[package]
name = "optimigation"
version = "0.1.0"
edition = "2021"
authors = ["Nima Hirota <p.t.c.i.27315@gmail.com>"]

description = "This is Rust tools for evolutionary computation, participate GA."

repository = "https://github.com/nima555/optimiGAtion"
readme = "README.md"

keywords = ["GA","evolutionary","Genetic","optimization"]
categories = ["science"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
text-colorizer = "1"
